Resolve minor layout issues and ensure consistent styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,9 +340,10 @@ body {
     object-fit: cover;
 }
 
-#toolbar-icon {
-    color: #ffffff;
+.toolbar-icon {
+    color: white;
     font-size: 2em;
+    cursor: pointer;
 }
 
 /* Home - Search Bar */
@@ -466,6 +467,7 @@ body {
 }
 
 /* Restaurants */
+/* Restaurants */
 .right-home-restaurants-container {
     margin-top: 2%;
     height: auto;
@@ -517,12 +519,12 @@ body {
     justify-content: center;
 }
 
-#restaurant-name {
+.restaurant-name {
     font-size: larger;
     font-weight: bold;
 }
 
-#restaurant-description {
+.restaurant-description {
     color: #878787;
     font-size: medium;
 }
@@ -574,7 +576,7 @@ body {
 
 .order-history-container h2 {
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 1rem;
     margin-top: 1rem;
 }
@@ -596,6 +598,12 @@ body {
 .active-orders p {
     font-size: 1rem;
     color: #666;
+}
+
+.order-history-container hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 3rem 0;
 }
 
 .past-order {
@@ -715,6 +723,66 @@ body {
     position: relative;
 }
 
+.modal-content h2 {
+    font-weight: 650;
+    font-size: large;
+    margin-bottom: 30px;
+}
+
+.modal-content h3 {
+    font-weight: 600;
+    font-size: medium;
+}
+
+.modal-order-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 25px;
+    margin-bottom: 20px;
+}
+
+.modal-order-image {
+    flex: 0 0 auto;
+    width: 100px;
+    height: 100px;
+}
+
+.modal-order-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height: 1px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+.button-container button {
+    padding: 10px 20px;
+}
+
+.order-summary-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.order-summary-item p {
+    margin: 0;
+}
+
+.price {
+    margin-left: 20px;
+    text-align: right;
+}
+
+
 /* The Close Button */
 .close {
     color: #aaa;
@@ -734,17 +802,17 @@ body {
    Settings Page
    ======================================== */
 
-.edit-profile-container {
-    padding: 1.5rem;
-    background-color: #fff;
-    border-radius: 10px;
-}
-
-.edit-profile-header {
+.edit-information-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.edit-information-header h2 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0;
 }
 
 .save-changes-button {
@@ -752,10 +820,11 @@ body {
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 0.4rem 0.8rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     font-size: 0.9rem;
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
 }
 
 .profile-column {
@@ -779,7 +848,7 @@ body {
 .details__phone-label,
 .details__location-label,
 .details__payment-label {
-    font-size: 0.8rem;
+    font-size: .9rem;
     font-weight: 500;
     margin-bottom: 0.4rem;
 }
@@ -792,12 +861,25 @@ body {
     font-size: 0.9rem;
 }
 
+.password-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.password-input {
+    width: 100%;
+    padding-right: 140px;
+}
+
 .change-password-button {
-    background-color: #f1f1f1;
+    position: absolute;
+    right: 10px;
+    background-color: transparent;
     color: #396C03;
     border: none;
     border-radius: 5px;
-    padding: 0.4rem 0.8rem;
     cursor: pointer;
     font-size: 0.8rem;
     font-family: 'Poppins', sans-serif;
@@ -848,10 +930,12 @@ body {
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 0.3rem 0.5rem;
+    padding: 0.5rem 0.8rem;
     cursor: pointer;
     font-size: 0.8rem;
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    margin-right: 1rem;
 }
 
 .add-payment-button {
@@ -859,8 +943,10 @@ body {
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 0.4rem 0.8rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     font-size: 0.9rem;
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    margin-top: 1rem;
 }
